--- a/index.html
+++ b/index.html
@@ -1,30 +1,62 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Bootstrap Home</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/popper.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-</head>
-<body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md bg-primary p-4">COL 6</div>
-      <div class="col-md bg-danger p-4">COL 4</div>
-      <div class="col-md bg-success p-4">COL 2</div>
-      <div class="col-md bg-info p-4">COL 2</div>
-      <div class="col-md bg-warning p-4">COL 2</div>
+  <head>
+    <title>Places</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/popper.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">Logo</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About Us</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-3 offset-0">
+          <img src="khumbhalgarh.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+          <div class="text-center mt-2">
+            <a href="khumbhalgarh.html" class="btn btn-primary btn-block" target="_blank">View</a>
+          </div>
+        </div>
+        <div class="col-3 offset-0">
+          <img src="chittorgarh.jpg" alt="chittorgarh" class="img-fluid custom-image" >
+          <div class="text-center mt-2">
+            <a href="chittorgarh.html" class="btn btn-primary btn-block" target="_blank">View</a>
+          </div>
+        </div>
+        <div class="col-3">
+          <img src="Udaipur.jpg" alt="udaipur" class="img-fluid custom-image">
+          <div class="text-center mt-2">
+            <a href="udaipur.html" class="btn btn-primary btn-block" target="_blank">View</a> 
+          </div>
+        </div>
+        <div class="col-3">
+          <img src="jodhpur.jpg" alt="jodhpur" class="img-fluid custom-image">
+          <div class="text-center mt-2">
+            <a href="jodhpur.html" class="btn btn-primary btn-block" target="_blank">View</a>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="jumbotron">
-    <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </div>
-</body>
+  </body>
 </html>
