changes image file
changes image file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="col-3 offset-0">
-          <img src="chittorgarh.jpg" alt="chittorgarh" class="img-fluid custom-image" >
+          <img src="Chittorgarh.jpg" alt="chittorgarh" class="img-fluid custom-image" >
           <div class="text-center mt-2">
             <a href="chittorgarh.html" class="btn btn-primary btn-block" target="_blank">View</a>
           </div>
