--- a/khumbhalgarh.html
+++ b/khumbhalgarh.html
@@ -88,7 +88,7 @@
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
             <div class="col-lg-5">
-              <img src="chittorgarh.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+              <img src="khumbhalgarh.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
             </div>
             <div class="col-lg-7">
               <div class="card-body">
@@ -102,7 +102,7 @@
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
             <div class="col-lg-5">
-              <img src="udaipur.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+              <img src="j2.jpg" alt="Udaipur" class="img-fluid hight-card-img">
             </div>
             <div class="col-lg-7">
               <div class="card-body">
