changed file name
changed file name

--- a/udaipur.html
+++ b/udaipur.html
@@ -99,7 +99,7 @@
           <div class="card rounded-0 shadow mb-3">
             <div class="row no-gutters">
               <div class="col-lg-5">
-                <img src="chittorgarh.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+                <img src="Chittorgarh.jpg" alt="Chittorgarh" class="img-fluid hight-card-img">
               </div>
               <div class="col-lg-7">
                 <div class="card-body">
@@ -113,7 +113,7 @@
           <div class="card rounded-0 shadow mb-3">
             <div class="row no-gutters">
               <div class="col-lg-5">
-                <img src="udaipur.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+                <img src="u1.jpg" alt="Udaipur" class="img-fluid hight-card-img">
               </div>
               <div class="col-lg-7">
                 <div class="card-body">
