--- a/about.html
+++ b/about.html
@@ -11,6 +11,16 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/popper.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+  <style type="text/css">
+  .carousel-inner img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    height: 400px !important;
+    width: 100%  !important;
+  }
+</style>
 
 </head>
 <body>
@@ -30,5 +40,49 @@
       </ul>
     </div>
   </nav>
+
+  <div class="container">
+    <div class="col-lg-12">
+
+    </div>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="N1.jpg" alt="First slide" class="img-fluid custom-image">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="Rajput-fort-Jaisalmer-Rajasthan-India.jpg" alt="Second slide" class="img-fluid custom-image">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="Rajput-procession-fort-mural-Jodhpur-India-Rajasthan.jpg" alt="Third slide" class="img-fluid custom-image">
+        </div>
+
+        <div class="carousel-item">
+          <img class="d-block w-100" src="N2.jpg" alt="Third slide" class="img-fluid custom-image">
+        </div>
+
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+  <div class="container">
+    <div class="text-justify mt-4">
+      <p>
+        Rajasthan, state of northwestern India, located in the northwestern part of the Indian subcontinent. It is bounded to the north and northeast by the states of Punjab and Haryana, to the east and southeast by the states of Uttar Pradesh and Madhya Pradesh, to the southwest by the state of Gujarat, and to the west and northwest by the provinces of Sindh and Punjab in Pakistan. The capital city is Jaipur, in the east-central part of the state.
+      </p>
+      <p>
+        Rajasthan, meaning “The Abode of the Rajas,” was formerly called Rajputana, “The Country of the Rajputs” (sons of rajas [princes]). Before 1947, when India achieved independence from British rule, it comprised some two dozen princely states and chiefships, the small British-administered province of Ajmer-Merwara, and a few pockets of territory outside the main boundaries. After 1947 the princely states and chiefships were integrated into India in stages, and the state took the name Rajasthan. It assumed its present form on November 1, 1956, when the States Reorganization Act came into force. Area 132,139 square miles (342,239 square km). Pop. (2011) 68,621,012.
+
+      </p>
+
+    </div>
+  </div>
 </body>
 </html>
