--- a/chittorgarh.html
+++ b/chittorgarh.html
@@ -50,7 +50,7 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="chittorgarh.jpg" alt="First slide" class="img-fluid custom-image">
+                <img class="d-block w-100" src="Chittorgarh.jpg" alt="First slide" class="img-fluid custom-image">
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="c1.jpg" alt="Second slide" class="img-fluid custom-image">
