--- a/place.html
+++ b/place.html
@@ -15,14 +15,14 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="index.html">Logo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="col-3 offset-0">
-          <img src="chittorgarh.jpg" alt="chittorgarh" class="img-fluid custom-image" >
+          <img src="Chittorgarh.jpg" alt="chittorgarh" class="img-fluid custom-image" >
           <div class="text-center mt-2">
             <a href="chittorgarh.html" class="btn btn-primary btn-block" target="_blank">View</a>
           </div>
