--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-3 offset-0">
+        <div class="col-lg-4 col-xl-3 col-md-6 offset-0">
           <img src="khumbhalgarh.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
           <div class="text-center mt-2">
             <a href="khumbhalgarh.html" class="btn btn-primary btn-block" target="_blank">View</a>
           </div>
         </div>
-        <div class="col-3 offset-0">
+        <div class="col-lg-4 col-xl-3 col-md-6 offset-0">
           <img src="Chittorgarh.jpg" alt="Chittorgarh" class="img-fluid custom-image" >
           <div class="text-center mt-2">
             <a href="chittorgarh.html" class="btn btn-primary btn-block" target="_blank">View</a>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-lg-4 col-xl-3 col-md-6">
           <img src="Udaipur.jpg" alt="udaipur" class="img-fluid custom-image">
           <div class="text-center mt-2">
             <a href="udaipur.html" class="btn btn-primary btn-block" target="_blank">View</a> 
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-lg-4 col-xl-3 col-md-6">
           <img src="jodhpur.jpg" alt="jodhpur" class="img-fluid custom-image">
           <div class="text-center mt-2">
             <a href="jodhpur.html" class="btn btn-primary btn-block" target="_blank">View</a>
