--- a/khumbhalgarh.html
+++ b/khumbhalgarh.html
@@ -145,5 +145,74 @@
 
 
   </div><!-- ==container -->
+  <div class="container">
+    <h4 class="mt-3 mb-3">Places to Visits in khumbhalgarh</h4>
+    <h3 class="mt-2"> Jungle Safari</h3>
+    <p>
+      Spreading across the Aravalli Range, Kumbhalgarh sanctuary covers parts of Rajsamand, Udaipur and Pali districts. The sanctuary makes home to many endangered species of wildlife. In fact, Kumbhalgarh is the only sanctuary of Rajasthan, where you can trace wolf engaged in its activities.
+    </p>
+    <div class="row">
+      <div class="col-xl-2 col-md-4">
+        <img src="safari.jpg" alt="khumbhalgarh" class="img-fluid">
+      </div>
+
+      <div class="col-xl-2 col-md-4">
+        <img src="safari1.jpg" alt="khumbhalgarh" class="img-fluid">
+      </div>
+      <div class="col-xl-2 col-md-4">
+        <img src="safari2.jpg" alt="khumbhalgarh" class="img-fluid">
+      </div>
+
+      <div class="col-xl-2 col-md-4">
+        <img src="safari3.jpg" alt="khumbhalgarh" class="img-fluid">
+      </div>
+    </div>
+
+<h3 class="mt-3"> Trekking</h3>
+    <p>
+      Kumbalgarh is the best place for trekking in aravils hills. Because it was virtually inaccessible in the 15th century, Rana Kumbha of Mewar built this great defensive fortress on a 3,500 feet (1,100 meters) high hill overlooking the approaches from Ajmer and Marwar.
+    </p>
+    <div class="row">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="T1.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="T2.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+      </div>
+      <div class="col-xl-3 col-md-6  mt-0">
+        <img src="T3.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="T4.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+      </div>
+    </div>
+        
+        <h3 class="mt-3"> Suraj Kund</h3>
+    <p>
+      One of the best place, natural and religious place, which is 7 k.m. away from Kumbhalgarh along with a beautiful green valley.There are beautiful trees, waterfalls & water reserves on the trekk.
+    </p>
+    <div class="row">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="s1.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="s2.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+      </div>
+      <div class="col-xl-3 col-md-6  mt-0">
+        <img src="s3.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="s4.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+      </div>
+    </div>
+
+
+
+
+  </div>
 </body>
 </html>
