--- a/jodhpur.html
+++ b/jodhpur.html
@@ -146,8 +146,70 @@
           </div>
         </div>
       </div><!-- ==row -->
-
-
     </div><!-- ==container -->
+
+    <div class="container">
+      <h4 class="mt-3 mb-3">Places to Visits in Jodhpur</h4>
+      Jodhpur flocks with tourist year after year, thanks to the breathtaking sites the location has to offer. Some of the sites include Mehrangarh Fort, Ghanta Ghar and Clock Tower. Moreover, Jodhpur is rich in history, sharing centuries of art and architecture
+
+      <h3 class="mt-2"> The Mehrangarh Fort</h3>
+      <p>The Mehrangarh Fort known as the largest and most famous forts in India, The Mehrangarh Fort is an impressive description of preserved heritage. Presently serving as a lucrative museum, it blossoms with 15,000 items right from Maharaja Gaj Singh II's collection. There are cultural performances that happen daily inside the fort where you can enjoy music, folk art and many more.</p>
+      <div class="row">
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj1.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj2.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj3.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj4.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+      </div>
+
+
+      <h3 class="mt-2"> The Jaswant Thada</h3>
+      <p>Built-in 1899, the Jaswant Thada is an intricately crafted cenotaph created in the memory of Maharaja Jaswant Singh. The structure shines with white marble, lattice screens and portraits of Rathore rulers. Here, you will experience a peaceful environment while enjoying the gleaming view of the city.</p>
+      <div class="row">
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj5.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj6.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj7.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj8.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+      </div>
+
+      <h3 class="mt-2"> The streets of the Blue city</h3>
+      <p>If you are looking for beautiful backgrounds to take outstanding photographs, then visit the Streets of the blue city. Known as Navchokiya, the location is a lovely site for tourists. Here, you can spend your time strolling along the streets, and you may also choose to get a guide to help you find your way through the chaotic streets.</p>
+      <div class="row">
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj9.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj10.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj11.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+
+        <div class="col-xl-3 col-md-6 mt-0">
+          <img src="pj12.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        </div>
+      </div>
+    </div>  <!-- Container -->
+
   </body>
   </html>
