--- a/khumbhalgarh.html
+++ b/khumbhalgarh.html
@@ -9,6 +9,8 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/popper.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   
   <style>
 
@@ -19,6 +21,13 @@
     margin-top: 20px;
     height: 400px !important;
     width: 100%  !important;
+  }
+  .rowset{
+    padding-top: 30px;
+  }
+
+  .con{
+    margin-top: 80px;
   }
 </style>
 </head>
@@ -145,30 +154,29 @@
 
 
   </div><!-- ==container -->
-  <div class="container">
+  <div class="container con">
     <h4 class="mt-3 mb-3">Places to Visits in khumbhalgarh</h4>
     <h3 class="mt-2"> Jungle Safari</h3>
     <p>
       Spreading across the Aravalli Range, Kumbhalgarh sanctuary covers parts of Rajsamand, Udaipur and Pali districts. The sanctuary makes home to many endangered species of wildlife. In fact, Kumbhalgarh is the only sanctuary of Rajasthan, where you can trace wolf engaged in its activities.
     </p>
-    <div class="row">
-      <div class="col-xl-2 col-md-4">
-        <img src="safari.jpg" alt="khumbhalgarh" class="img-fluid">
+    <div class="row rowset">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="safari.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
       </div>
 
-      <div class="col-xl-2 col-md-4">
-        <img src="safari1.jpg" alt="khumbhalgarh" class="img-fluid">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="safari1.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
       </div>
-      <div class="col-xl-2 col-md-4">
-        <img src="safari2.jpg" alt="khumbhalgarh" class="img-fluid">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="safari2.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
       </div>
 
-      <div class="col-xl-2 col-md-4">
-        <img src="safari3.jpg" alt="khumbhalgarh" class="img-fluid">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="safari3.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
       </div>
     </div>
-
-<h3 class="mt-3"> Trekking</h3>
+    <h3 class="mt-3"> Trekking</h3>
     <p>
       Kumbalgarh is the best place for trekking in aravils hills. Because it was virtually inaccessible in the 15th century, Rana Kumbha of Mewar built this great defensive fortress on a 3,500 feet (1,100 meters) high hill overlooking the approaches from Ajmer and Marwar.
     </p>
@@ -188,8 +196,8 @@
         <img src="T4.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
       </div>
     </div>
-        
-        <h3 class="mt-3"> Suraj Kund</h3>
+
+    <h3 class="mt-3"> Suraj Kund</h3>
     <p>
       One of the best place, natural and religious place, which is 7 k.m. away from Kumbhalgarh along with a beautiful green valley.There are beautiful trees, waterfalls & water reserves on the trekk.
     </p>
@@ -209,10 +217,6 @@
         <img src="s4.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
       </div>
     </div>
-
-
-
-
   </div>
 </body>
 </html>
