--- a/udaipur.html
+++ b/udaipur.html
@@ -1,160 +1,278 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Udaipur</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/popper.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+<head>
+  <title>Udaipur</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="css/custom.css">
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/popper.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
 
 
-    <style>
+  <style>
 
-      .carousel-inner img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 20px;
-        height: 400px !important;
-        width: 100%  !important;
-      }
+  .carousel-inner img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    height: 400px !important;
+    width: 100%  !important;
+  }
 
-    </style>
+</style>
 
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Logo</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="place.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About Us</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container">
-      <div class="row mt-4">
-        <div class="col-lg-7">
-          <div class="text-center">
-            <h1 class="display-4">Udaipur</h1>
-            <p>(City of Lakes)</p>
-          </div>
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="Udaipur.jpg" alt="First slide" class="img-fluid custom-image">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="u1.jpg" alt="Second slide" class="img-fluid custom-image">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="u2.jpg" alt="Third slide" class="img-fluid custom-image">
-              </div>
-
-              <div class="carousel-item">
-                <img class="d-block w-100" src="u3.jpg" alt="Third slide" class="img-fluid custom-image">
-              </div>
-
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Logo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="place.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About Us</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row mt-4">
+      <div class="col-lg-7">
+        <div class="text-center">
+          <h1 class="display-4">Udaipur</h1>
+          <p>(City of Lakes)</p>
+        </div>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="Udaipur.jpg" alt="First slide" class="img-fluid custom-image">
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-
-          <div class="text-justify mt-4">
-
-            <p>
-              The charm that Udaipur holds can be seen from the names that it has been bestowed with. The City of Dawn, the City of Lakes and Venice of the East are just a few of the names with which Udaipur is often referred.
-
-              Udaipur presents a historical spectacle which is sure to spellbind every visitor with its unequivocal architectural beauty and hypnotic cultural vibrancy. Located in the state of Rajasthan, on the southern side of the majestic Aravalli hills, this city attracts travellers from all over the world.
-            </p>
-            <p>Whether you are seeking a holiday with nature and scenic beauty or amidst the grandeur of ancient structures, whether you are looking for a break from monotony by indulging in some cultural colourfulness and pampering of palate with mouth-watering cuisines, Udaipur is the answer to all your holiday dreams.
-
-              Historically the city of Udaipur was also the capital of Mewar Kingdom, after it was founded in 1553 by the Maharana Udai Singh II. The palaces, grand gardens, museums and cultural shows present a glimpse of its rich past, while lakes and surrounding hills soothes your soul and promise a refreshing stay.
-
-              One can explore this city in a hassle free manner by choosing suitable a package from our list of Udaipur Tour packages which we at Udaipur Tourism, a division of Holidays DNA, have carefully created as well as accumulated by working closely with various tour organizers in Udaipur.
-            </p>
-          </div>
-        </div> 
-
-
-        <div class="col-lg-5">
-          <h3 class="mt-3 mb-3">View more nearby places</h3>
-
-          <div class="card rounded-0 shadow mb-3">
-            <div class="row no-gutters">
-              <div class="col-lg-5">
-                <img src="Chittorgarh.jpg" alt="Chittorgarh" class="img-fluid hight-card-img">
-              </div>
-              <div class="col-lg-7">
-                <div class="card-body">
-                  <h4>Chittorgarh Fort</h4>
-                  <h6>Rajasthan</h6>
-                </div>
-              </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="u1.jpg" alt="Second slide" class="img-fluid custom-image">
             </div>
-          </div>
-
-          <div class="card rounded-0 shadow mb-3">
-            <div class="row no-gutters">
-              <div class="col-lg-5">
-                <img src="u1.jpg" alt="Udaipur" class="img-fluid hight-card-img">
-              </div>
-              <div class="col-lg-7">
-                <div class="card-body">
-                  <h4>Udaipur Fort</h4>
-                  <h6>Rajasthan</h6>
-                </div>
-              </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="u2.jpg" alt="Third slide" class="img-fluid custom-image">
             </div>
-          </div>
 
-          <div class="card rounded-0 shadow mb-3">
-            <div class="row no-gutters">
-              <div class="col-lg-5">
-                <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
-              </div>
-              <div class="col-lg-7">
-                <div class="card-body">
-                  <h4> Jodhpur Fort</h4>
-                  <h6>Rajasthan</h6>
-                </div>
-              </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="u3.jpg" alt="Third slide" class="img-fluid custom-image">
             </div>
-          </div>
 
-          <div class="card rounded-0 shadow mb-3">
-            <div class="row no-gutters">
-              <div class="col-lg-5">
-                <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
-              </div>
-              <div class="col-lg-7">
-                <div class="card-body">
-                  <h4>Kumbhalgarh Fort</h4>
-                  <h6>Rajasthan</h6>
-                </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+        <div class="text-justify mt-4">
+
+          <p>
+            The charm that Udaipur holds can be seen from the names that it has been bestowed with. The City of Dawn, the City of Lakes and Venice of the East are just a few of the names with which Udaipur is often referred.
+
+            Udaipur presents a historical spectacle which is sure to spellbind every visitor with its unequivocal architectural beauty and hypnotic cultural vibrancy. Located in the state of Rajasthan, on the southern side of the majestic Aravalli hills, this city attracts travellers from all over the world.
+          </p>
+          <p>Whether you are seeking a holiday with nature and scenic beauty or amidst the grandeur of ancient structures, whether you are looking for a break from monotony by indulging in some cultural colourfulness and pampering of palate with mouth-watering cuisines, Udaipur is the answer to all your holiday dreams.
+
+            Historically the city of Udaipur was also the capital of Mewar Kingdom, after it was founded in 1553 by the Maharana Udai Singh II. The palaces, grand gardens, museums and cultural shows present a glimpse of its rich past, while lakes and surrounding hills soothes your soul and promise a refreshing stay.
+
+            One can explore this city in a hassle free manner by choosing suitable a package from our list of Udaipur Tour packages which we at Udaipur Tourism, a division of Holidays DNA, have carefully created as well as accumulated by working closely with various tour organizers in Udaipur.
+          </p>
+        </div>
+      </div> 
+
+
+      <div class="col-lg-5">
+        <h3 class="mt-3 mb-3">View more nearby places</h3>
+
+        <div class="card rounded-0 shadow mb-3">
+          <div class="row no-gutters">
+            <div class="col-lg-5">
+              <img src="Chittorgarh.jpg" alt="Chittorgarh" class="img-fluid hight-card-img">
+            </div>
+            <div class="col-lg-7">
+              <div class="card-body">
+                <h4>Chittorgarh Fort</h4>
+                <h6>Rajasthan</h6>
               </div>
             </div>
           </div>
         </div>
-      </div><!-- ==row -->
+
+        <div class="card rounded-0 shadow mb-3">
+          <div class="row no-gutters">
+            <div class="col-lg-5">
+              <img src="u1.jpg" alt="Udaipur" class="img-fluid hight-card-img">
+            </div>
+            <div class="col-lg-7">
+              <div class="card-body">
+                <h4>Udaipur Fort</h4>
+                <h6>Rajasthan</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card rounded-0 shadow mb-3">
+          <div class="row no-gutters">
+            <div class="col-lg-5">
+              <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            </div>
+            <div class="col-lg-7">
+              <div class="card-body">
+                <h4> Jodhpur Fort</h4>
+                <h6>Rajasthan</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card rounded-0 shadow mb-3">
+          <div class="row no-gutters">
+            <div class="col-lg-5">
+              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            </div>
+            <div class="col-lg-7">
+              <div class="card-body">
+                <h4>Kumbhalgarh Fort</h4>
+                <h6>Rajasthan</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- ==row -->
 
 
-    </div><!-- ==container -->
-  </body>
+  </div><!-- ==container -->
+
+
+  <div class="container">
+    <h4 class="mt-3 mb-3">Places to Visits in Udaipur</h4>
+    <h3 class="mt-2">Lakes</h3>
+    <p>
+      Udaipur has the stunning architecture which reminds you royal Rajputana tradition. It is located near the Gujarat border so the Guajarati language is also spoken there along with Mewari. The city is also known as “city of lakes” because all of its natural lakes
+      It has seven lakes surrounding the city. Five of the major lakes, namely, Fateh Sagar Lake, Lake Pichola, Swaroop Sagar Lake, Rangsagar and Doodh Talai Lake have been included under the restoration project of the National Lake Conservation Plan (NLCP) of the Government of India.
+    </p>
+    <div class="row">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu1.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu2.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu3.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu4.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu5.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu6.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu7.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu8.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+    </div>
+
+    <h3 class="mt-3"> Vintage Car Museum</h3>
+    <p>
+      A museum of vintage vehicles – is a must. Housed in the former Mewar State Motor Garage, the museum displays luxury vintage wheels like the 1934 Rolls-Royce Phantom II that was later converted into a pick-up truck used during royal hunts, another 1934 Rolls-Royce that was converted to transport the entire Mewar royal cricket team. You can also see Cadillacs, several Mercedes-Benzs, Buicks, a Ford Model A and many others. A high point of the museum is the royal Shell Petrol Pump that still works! here you can check all museums in Udaipur.
+    </p>
+
+    <div class="row">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu9.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu10.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu11.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu12.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+    </div>
+
+    <h3 class="mt-3"> Maharana Pratap Memorial</h3>
+    <p>
+     Right at the top of the Moti Magri, overlooking the Fateh Sagar Lake is a lifelike statue of Udaipur’s most celebrated ruler, Maharana Pratap and his beloved horse Chetak. Visit this imposing memorial to the warrior king and his favorite mount who is believed to have saved his master’s life in the epic battle of Haldighati. A Japanese rock garden and the remnants of an old fort in Udaipur lie nearby and make for an interesting vignette.
+   </p>
+
+   <div class="row">
+    <div class="col-xl-3 col-md-6 mt-0">
+      <img src="pu13.jpg" alt="Udaipur" class="img-fluid custom-image">
+    </div>
+
+    <div class="col-xl-3 col-md-6 mt-0">
+      <img src="pu14.jpg" alt="Udaipur" class="img-fluid custom-image">
+    </div>
+
+    <div class="col-xl-3 col-md-6 mt-0">
+      <img src="pu15.jpg" alt="Udaipur" class="img-fluid custom-image">
+    </div>
+
+    <div class="col-xl-3 col-md-6 mt-0">
+      <img src="pu16.jpg" alt="Udaipur" class="img-fluid custom-image">
+    </div>
+  </div>
+
+  <h3 class="mt-3"> Saheliyon Ki Bari</h3>
+  <p>
+    Saheliyon Ki Bari or the Garden of the Maidens was built by Maharana Sangram Singh in the early years of the 18th century. This awe-inspiring development catered to the maids who would go with the Princess of Udaipur to her husband’s hearth (part of the dowry given by the Maharana). This place had pretty women dancing, singing and making merry and the beautiful marble elephants, fountains, a lotus pool and kiosks bear ample testimony to the richness of the time.
+
+    <div class="row">
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu17.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu18.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu19.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+
+      <div class="col-xl-3 col-md-6 mt-0">
+        <img src="pu20.jpg" alt="Udaipur" class="img-fluid custom-image">
+      </div>
+    </div>
+
+
+  </div> <!-- //container -->
+
+
+
+</body>
 </html>
