--- a/chittorgarh.html
+++ b/chittorgarh.html
@@ -166,18 +166,18 @@
 
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc1.jpg" alt="chittorgarh" class="img-fluid custom-image">
+        <img src="pc1.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc2.jpg" alt="chittorgarh" class="img-fluid custom-image">
+        <img src="pc2.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
       </div>
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc3.jpg" alt="chittorgarh" class="img-fluid custom-image">
+        <img src="pc3.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc4.jpg" alt="chittorgarh" class="img-fluid custom-image">
+        <img src="pc4.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
       </div>
     </div>
 
@@ -190,18 +190,18 @@
 
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc5.jpg" alt="chittorgarh" class="img-fluid custom-image">
+        <img src="pc5.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc6.jpg" alt="chittorgarh" class="img-fluid custom-image">
+        <img src="pc6.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
       </div>
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc7.jpg" alt="chittorgarh" class="img-fluid custom-image">
+        <img src="pc7.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc8.jpg" alt="chittorgarh" class="img-fluid custom-image">
+        <img src="pc8.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
       </div>
     </div>
 
@@ -216,18 +216,18 @@
 
    <div class="row">
     <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pc9.jpg" alt="chittorgarh" class="img-fluid custom-image">
+      <img src="pc9.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
     </div>
 
     <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pc10.jpg" alt="chittorgarh" class="img-fluid custom-image">
+      <img src="pc10.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
     </div>
     <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pc11.jpg" alt="chittorgarh" class="img-fluid custom-image">
+      <img src="pc11.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
     </div>
 
-    <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pc12.jpg" alt="chittorgarh" class="img-fluid custom-image">
+    <div class="col-xl-3 col-md-6 mt-0 mb-3">
+      <img src="pc12.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
     </div>
   </div>
 
