--- a/jodhpur.html
+++ b/jodhpur.html
@@ -156,18 +156,18 @@
       <p>The Mehrangarh Fort known as the largest and most famous forts in India, The Mehrangarh Fort is an impressive description of preserved heritage. Presently serving as a lucrative museum, it blossoms with 15,000 items right from Maharaja Gaj Singh II's collection. There are cultural performances that happen daily inside the fort where you can enjoy music, folk art and many more.</p>
       <div class="row">
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj1.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj1.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
 
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj2.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj2.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj3.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj3.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
 
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj4.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj4.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
       </div>
 
@@ -176,18 +176,18 @@
       <p>Built-in 1899, the Jaswant Thada is an intricately crafted cenotaph created in the memory of Maharaja Jaswant Singh. The structure shines with white marble, lattice screens and portraits of Rathore rulers. Here, you will experience a peaceful environment while enjoying the gleaming view of the city.</p>
       <div class="row">
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj5.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj5.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
 
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj6.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj6.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj7.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj7.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
 
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj8.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj8.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
       </div>
 
@@ -195,18 +195,18 @@
       <p>If you are looking for beautiful backgrounds to take outstanding photographs, then visit the Streets of the blue city. Known as Navchokiya, the location is a lovely site for tourists. Here, you can spend your time strolling along the streets, and you may also choose to get a guide to help you find your way through the chaotic streets.</p>
       <div class="row">
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj9.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj9.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
 
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj10.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj10.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
         <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj11.jpg" alt="Jodhpur" class="img-fluid custom-image">
+          <img src="pj11.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
 
-        <div class="col-xl-3 col-md-6 mt-0">
-          <img src="pj12.jpg" alt="Jodhpur" class="img-fluid custom-image">
+        <div class="col-xl-3 col-md-6 mt-0 mb-3">
+          <img src="pj12.jpg" alt="Jodhpur" class="img-fluid custom-image mt-20-px">
         </div>
       </div>
     </div>  <!-- Container -->
