--- a/khumbhalgarh.html
+++ b/khumbhalgarh.html
@@ -154,26 +154,26 @@
 
 
   </div><!-- ==container -->
-  <div class="container con">
+  <div class="container">
     <h4 class="mt-3 mb-3">Places to Visits in khumbhalgarh</h4>
     <h3 class="mt-2"> Jungle Safari</h3>
     <p>
       Spreading across the Aravalli Range, Kumbhalgarh sanctuary covers parts of Rajsamand, Udaipur and Pali districts. The sanctuary makes home to many endangered species of wildlife. In fact, Kumbhalgarh is the only sanctuary of Rajasthan, where you can trace wolf engaged in its activities.
     </p>
-    <div class="row rowset">
+    <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="safari.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="safari.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="safari1.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="safari1.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="safari2.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="safari2.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="safari3.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="safari3.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
     </div>
     <h3 class="mt-3"> Trekking</h3>
@@ -182,18 +182,18 @@
     </p>
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="T1.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="T1.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="T2.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="T2.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
       <div class="col-xl-3 col-md-6  mt-0">
-        <img src="T3.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="T3.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="T4.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="T4.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
     </div>
 
@@ -203,18 +203,18 @@
     </p>
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="s1.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="s1.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="s2.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="s2.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
       <div class="col-xl-3 col-md-6  mt-0">
-        <img src="s3.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+        <img src="s3.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
 
-      <div class="col-xl-3 col-md-6 mt-0">
-        <img src="s4.jpg" alt="khumbhalgarh" class="img-fluid custom-image">
+      <div class="col-xl-3 col-md-6 mt-0 mb-3">
+        <img src="s4.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
       </div>
     </div>
   </div>
