--- a/udaipur.html
+++ b/udaipur.html
@@ -167,37 +167,37 @@
     </p>
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu1.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu1.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu2.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu2.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu3.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu3.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu4.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu4.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
     </div>
 
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu5.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu5.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu6.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu6.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu7.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu7.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu8.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu8.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
     </div>
 
@@ -208,19 +208,19 @@
 
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu9.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu9.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu10.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu10.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu11.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu11.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu12.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu12.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
     </div>
 
@@ -231,19 +231,19 @@
 
    <div class="row">
     <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pu13.jpg" alt="Udaipur" class="img-fluid custom-image">
+      <img src="pu13.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
     </div>
 
     <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pu14.jpg" alt="Udaipur" class="img-fluid custom-image">
+      <img src="pu14.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
     </div>
 
     <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pu15.jpg" alt="Udaipur" class="img-fluid custom-image">
+      <img src="pu15.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
     </div>
 
     <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pu16.jpg" alt="Udaipur" class="img-fluid custom-image">
+      <img src="pu16.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
     </div>
   </div>
 
@@ -253,19 +253,19 @@
 
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu17.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu17.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu18.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu18.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu19.jpg" alt="Udaipur" class="img-fluid custom-image">
+        <img src="pu19.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
 
-      <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pu20.jpg" alt="Udaipur" class="img-fluid custom-image">
+      <div class="col-xl-3 col-md-6 mt-0 mb-3">
+        <img src="pu20.jpg" alt="Udaipur" class="img-fluid custom-image mt-20-px">
       </div>
     </div>
 
