--- a/contact.html
+++ b/contact.html
@@ -112,11 +112,11 @@
             <div class="col-md-3 text-center">
                 <ul class="list-unstyled mb-0">
                     <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                        <p>Indore, Madhya Pradesh</p>
+                        <p>Baroda, Gujarat</p>
                     </li>
 
                     <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                        <p>+91 9907028865</p>
+                        <p>+91 9427131546</p>
                     </li>
 
                     <li><i class="fas fa-envelope mt-4 fa-2x"></i>
